Fix wrapping in menu

--- a/web/src/less/page-layout.less
+++ b/web/src/less/page-layout.less
@@ -46,6 +46,7 @@
               display: block;
               padding: .5rem .7rem;
               color: @headerFontColor;
+              white-space: nowrap;
 
               &:hover {
                 background-color: @navHoverBackgroundColor;
